// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoreItemFormHolder Component tests Form Holder state OPEN - WITH Current StoreItem Data - NO IMAGES Should Properly Mount Form Holder 1`] = `
<StoreItemFormHolder>
  <div
    id="storeItemFormHolder"
  >
    <FormErrorComponent
      error={null}
    />
    <GridRow>
      <div
        className="row"
      >
        <GridColumn
          computer={14}
          mobile={16}
          tablet={15}
        >
          <div
            className="fourteen wide computer sixteen wide mobile fifteen wide tablet column"
          >
            <Button
              as="button"
              content="Open Form"
              id="storeItemFormToggleBtn"
              onClick={[Function]}
            >
              <Ref
                innerRef={
                  Object {
                    "current": <button
                      class="ui button"
                      id="storeItemFormToggleBtn"
                    >
                      Open Form
                    </button>,
                  }
                }
              >
                <RefFindNode
                  innerRef={
                    Object {
                      "current": <button
                        class="ui button"
                        id="storeItemFormToggleBtn"
                      >
                        Open Form
                      </button>,
                    }
                  }
                >
                  <button
                    className="ui button"
                    id="storeItemFormToggleBtn"
                    onClick={[Function]}
                  >
                    Open Form
                  </button>
                </RefFindNode>
              </Ref>
            </Button>
          </div>
        </GridColumn>
      </div>
    </GridRow>
  </div>
</StoreItemFormHolder>
`;

exports[`StoreItemFormHolder Component tests Form Holder state OPEN - WITH Current StoreItem Data - WITH IMAGES - Submit action Should have a submit button 1`] = `
<Button
  as="button"
  content="Create  New Store Item"
  id="adminStoreItemFormCreate"
  onClick={[Function]}
  type="submit"
>
  <Ref
    innerRef={
      Object {
        "current": <button
          class="ui button"
          id="adminStoreItemFormCreate"
          type="submit"
        >
          Create  New Store Item
        </button>,
      }
    }
  >
    <RefFindNode
      innerRef={
        Object {
          "current": <button
            class="ui button"
            id="adminStoreItemFormCreate"
            type="submit"
          >
            Create  New Store Item
          </button>,
        }
      }
    >
      <button
        className="ui button"
        id="adminStoreItemFormCreate"
        onClick={[Function]}
        type="submit"
      >
        Create  New Store Item
      </button>
    </RefFindNode>
  </Ref>
</Button>
`;
